# codex-kaioken

./: README.md  conductor.json
.github/workflows/: release-binaries.yml  rust-ci.yml  rust-release.yml  sdk.yml  shell-tool-mcp.yml
codex-rs/: .gitignore  Cargo.toml  README.md  UPSTREAM_FEATURES_PLAN.md  justfile
codex-rs/app-server/tests/common/: lib.rs  rollout.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/common/src/: model_presets.rs
codex-rs/core/: Cargo.toml  gpt-5.2-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  prompt.md
codex-rs/core/src/: auth.rs  codex.rs  conversation_manager.rs  default_client.rs  exec.rs  features.rs  lib.rs  mcp_connection_manager.rs  model_family.rs  user_instructions.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/gui/: index.html  package-lock.json  package.json  tailwind.config.js
codex-rs/gui/src/: App.tsx  index.css  tauri-api.ts  types.ts
codex-rs/gui/src-tauri/: Cargo.toml  tauri.conf.json
codex-rs/gui/src-tauri/capabilities/: default.json
codex-rs/gui/src-tauri/src/: main.rs  types.rs  workspace.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/npm/: README.md  package-lock.json  package.json
codex-rs/protocol/src/: models.rs  protocol.rs
codex-rs/tui/: Cargo.toml  build.rs
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  frames.rs  history_cell.rs  lib.rs  model_migration.rs  semantic.rs  slash_command.rs  status_indicator_widget.rs  updates.rs  version.rs
docs/: getting-started.md  slash_commands.md
(+156 files in other folders)
