[package]
name = "codex-kaioken-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread", "signal", "process", "io-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Codex integration
codex-core = { workspace = true }
codex-common = { workspace = true }
codex-protocol = { workspace = true }
codex-backend-client = { workspace = true }
mcp-types = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
